pi-cluster/deployments/photos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: photos
  labels:
    app: photos
  namespace: photos
spec:
  type: ClusterIP
  selector:
    app: photos
  ports:
    - name: http
      port: 80
      targetPort: http
