pi-cluster/deployments/photos/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: photos
  namespace: photos
  labels:
    app: photos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - photos.charlieegan3.com
    secretName: photos-tls
  rules:
  - host: photos.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: photos
          servicePort: 80
